# oop

./: README.md
lab0/: CMakeLists.txt  cmd_settings.cpp  cmd_settings.h  main.cpp  tests.cpp
lab0/cmd/: cmd_reader.cpp  cmd_reader.h
lab0/tables/: tables.cpp  tables.h
lab0/tests/: CMakeLists.txt  tests.cpp
lab0/tests/tests_files/: input.txt
lab1_fast_arithmetic/: CMakeLists.txt  main.cpp  тз.txt
lab1_fast_arithmetic/big_long/: CMakeLists.txt  big_long.cpp  big_long.h  big_long_config.h  big_long_core.cpp  big_long_core.h  big_long_impl.h  big_long_operators.cpp  big_long_template.h  big_long_types.h
lab1_fast_arithmetic/tests/: CMakeLists.txt  core_tests.cpp  init_tests.cpp  operators_test.cpp  tests.cpp
lab2/: CMakeLists.txt  grammar.gram  grammar.ini
lab2/language_syntax/: examples.py  interface.py
lab2/src/: CMakeLists.txt  cmd_parser.cpp  command_executor.cpp  command_executor.hpp  main.cpp  test.cpp
lab2/src/cmd_parser/: cmd_parser.hpp
lab2/src/command_executor/: CMakeLists.txt  cmd_commands.cpp  cmd_commands.hpp  commands_impl.cpp  executor.cpp  executor.hpp
lab2/src/command_executor/base_commands/: core_commands.cpp  core_commands.hpp  file_commands.cpp  file_commands.hpp
lab2/src/command_executor/cmd_parser/: cmd_args.hpp  cmd_parser.cpp  cmd_parser.hpp
lab2/src/command_executor/utils/: utils.cpp  utils.hpp
lab2/src/file_executor/: CMakeLists.txt  file_commands.cpp  file_executor.cpp
lab2/src/file_executor/interpreter/: interpreter.cpp  interpreter.hpp
lab2/src/file_executor/interpreter/tree_interpreter/: CMakeLists.txt  rules.cpp  tree_interpreter.cpp  tree_interpreter.hpp
lab2/src/file_executor/tree_executor/: CMakeLists.txt  executor.cpp  executor.hpp  tree_executor.cpp  tree_executor.hpp
lab2/src/file_executor/tree_executor/core/: core.hpp  func_calls.cpp  func_runs.cpp  predicats.cpp  tree_interpreter.cpp  tree_interpreter.hpp  types.cpp  types.hpp
lab2/src/include/: file_exec.hpp  file_executor.hpp  interpreter.hpp
lab2/src/interpreter/: CMakeLists.txt  interpreter.cpp
lab2/src/interpreter/tree_interpreter/: rules.cpp  tree_interpreter.cpp
lab2/src/interpreter/tree_interpreter/core/: types.cpp  types.hpp  utils.hpp
lab2/src/libs/: CMakeLists.txt
lab2/src/libs/cmd_parser/: CMakeLists.txt  cmd_args.hpp  cmd_parser.cpp  cmd_parser.hpp
lab2/src/libs/file_parser/: CMakeLists.txt  parser.cpp  parser.hpp  parser_exceptions.hpp  parser_rules.cpp  types.hpp
lab2/src/libs/file_parser/tokenizer/: CMakeLists.txt  syntax_errors.h  tokenizer.c  tokenizer_api.c  tokenizer_api.h
lab2/src/libs/tokenizer/: syntax_errors.h  token.h  token_buffer.c  token_buffer.h  tokenizer.c  tokenizer.h  tokenizer_api.c  tokenizer_api.h
lab2/src/libs/wav/: CMakeLists.txt  wav.cpp  wav.hpp  wav_exceptions.hpp  wav_file.cpp  wav_file.hpp  wav_reader.cpp
lab2/src/libs/wav/internal/: config.hpp  (+11 more)
lab2/src/wav/: CMakeLists.txt  wav.cpp  wav.hpp  wav_exceptions.hpp  wav_file.cpp  wav_utils.cpp  wav_utils.hpp
lab2/tests/: CMakeLists.txt  cmd_commands_tests.cpp  cmd_parser_tests.cpp  cmd_tests.cpp  file_parser_tests.cpp  test_paths.hpp  wav_tests.cpp
lab2/tests/tests_data/file_parser/: all_types_args.txt  complex_recursive.txt  func_and_method.txt  if_block.txt  if_else_block.txt  simple_assign.txt
(+37 files in other folders)
