cmake_minimum_required(VERSION 3.10)

project(wav_lib)

find_package(GTest REQUIRED)
include(GoogleTest)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# add_compile_options(-Wall -Wextra -Wpedantic -g)
add_subdirectory(src)
add_subdirectory(tests)

enable_testing()